--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="android:Theme.Light" />
+    <style name="AppTheme" parent="android:Theme.Light.NoTitleBar" />
     
     <style name="whatsnew_Txt">
         <item name="android:textSize">23sp</item>
